<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.activities.LoginActivity">

        <ImageView
            android:id="@+id/formLogo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:paddingTop="20dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_jslogo" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/formLogo"

            android:layout_alignParentBottom="true"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="293dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formLogo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/trans_white_rectangle"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:text="Login"
                    android:textColor="#003989"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_white"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="5dp"
                    android:hint="User Name"
                    android:paddingStart="10dp"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/password"
                        android:layout_width="329dp"
                        android:layout_height="37dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_white"
                        android:drawableLeft="@drawable/ic_password"
                        android:drawablePadding="5dp"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/showHide"
                        android:layout_width="59dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="16dp"
                        app:srcCompat="@drawable/ic_hide_password" />

                </RelativeLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/register_button"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/registerLink"
                    android:layout_width="246dp"
                    android:layout_height="39dp"
                    android:layout_gravity="center"
                    android:text="New User?"
                    android:textAlignment="center"
                    android:textColor="#003989"
                    android:textSize="18sp" />

            </LinearLayout>

        </ScrollView>

        <FrameLayout
            android:id="@+id/progressBarOverlay"
            android:animateLayoutChanges="true"
            android:visibility="gone"
            android:alpha="0.4"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:indeterminateTint="#003989"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
