<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:mapbox="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.MapFragment">

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            mapbox:mapbox_cameraZoom="12" />


        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:enabled="false"
            android:text="@string/start_navigating"
            mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintHorizontal_bias="0.6"
            mapbox:layout_constraintStart_toStartOf="parent" />
        <Button
            android:id="@+id/endNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:visibility="gone"
            android:text="Rate Passengers"
            mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintHorizontal_bias="0.6"
            mapbox:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>