...
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="access_token">pk.eyJ1Ijoic2h1Y2hpMDciLCJhIjoiY2sydnBoMmQ4MDZ6azNobGpqMmx2ZWFnZiJ9.kfIZF0GCcZhK0nhl0OqKAQ</string>
    <string name="start_navigating">Start Navigating</string>
    <string name="ad_hoc">Ad Hoc Commute</string>
    <string name="daily">Daily Commute</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="logout">logout</string>
...
